fix: Overflowing text

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
 }
 
 button {
-  @apply flex items-center text-center;
+  @apply truncate  flex items-center text-center;
 }
 
 label {
